--- a/css/tailwind.prod.css
+++ b/css/tailwind.prod.css
@@ -626,8 +626,10 @@ a.text-link {
     padding-bottom: 3px;
   }
 
-a.text-link:hover {
-    opacity: 0.8;
+@media (hover: hover) {
+    a.text-link:hover {
+      opacity: 0.8;
+    }
   }
 
 .cta {
@@ -750,29 +752,14 @@ a.text-link:hover {
   padding-bottom: 1.75rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .text-center {
